--- a/lesson_03_27/index.html
+++ b/lesson_03_27/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="kitchen.css" type="text/css">
 </head>
 <body>
-<h1><img src="foods.png" alt="food illustration">Jen的餐廳</h1>
+<h1><img src="foods.png" alt="food illustration">我的餐廳</h1>
 <p>If you love to read about <strong>cooking and eating</strong>, would like to learn about some of the best restaurants in the world, or just want a few choice recipes to add to your collection, <em>this is the site for you!</em></p>
 <p><img src="spoon.png" alt="spoon illustration"> Your pal, Jen at Jen's Kitchen</p>
 <hr>
