--- a/lesson_03_27/index2.html
+++ b/lesson_03_27/index2.html
@@ -73,7 +73,26 @@
             </p>
         </blockquote>
     </blockquote>
+    <pre>
+        This is         lot of 
 
+        text with a
+    </pre>
+
+    <figure>
+        chart showing fonts on mobile devices
+    </figure>
+    <figure>
+        <pre>
+            <code>
+body {
+background-color: #000;
+color: red;
+}
+            </code>
+        </pre>
+        <figcaption>Sample CSS rule.</figcaption>
+    </figure>
 
 </body>
 
