--- a/lesson_03_28/lesson3.html
+++ b/lesson_03_28/lesson3.html
@@ -6,11 +6,18 @@
 <!-- html的註解 -->
 <style>
     /*這是CSS的註解*/
-    h1{
+    
+    h1 {
+        color: brown; /*這是改變文字顏色*/
+        margin-top: 2em;    
+    }
+    
+    h1 {
         /*這是CSS的註解*/
         color: aqua; /*這是改變文字顏色*/
         margin-top: 2em;
     }
+
 </style>
 </head>
 
