--- a/lesson_03_28/lesson6.html
+++ b/lesson_03_28/lesson6.html
@@ -7,7 +7,7 @@
     
     <style>
         h1,h2,p,em,img{
-            border: solid 1ex orange; 
+            border: solid 1vw orange; 
         }
         
     </style>
