--- a/lesson_03_28/lesson6.html
+++ b/lesson_03_28/lesson6.html
@@ -6,7 +6,11 @@
     <title>Cooking with Nada Surf</title>
     
     <style>
-        h1,h2,p,em,img{
+        h1,
+        h2,
+        p,
+        em,
+        img {
             border: solid 1vw orange; 
         }
         
