--- a/lesson_03_28/lesson6.html
+++ b/lesson_03_28/lesson6.html
@@ -11,7 +11,7 @@
         p,
         em,
         img {
-            border: solid 1vw orange; 
+            border: solid 1ex orange; 
         }
         
     </style>
