--- a/lesson_04_10/lesson1.html
+++ b/lesson_04_10/lesson1.html
@@ -17,6 +17,26 @@
 
         h1 {
             font-family: "Noto Snas TC", Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 1.5em;
+
+        }
+
+        h2 {
+            font-size: 1em;
+
+        }
+
+        dt {
+            font-weight: bold;
+
+        }
+
+        strong {
+            font-style: italic;
+        }
+
+        p {
+            font: 1em sans-serif;
         }
     </style>
 
