--- a/lesson_04_10/lesson1.html
+++ b/lesson_04_10/lesson1.html
@@ -38,6 +38,26 @@
         p {
             font: 1em sans-serif;
         }
+
+        body {
+            color: gray;
+
+        }
+
+        #info p {
+            font-style: italic;
+            color: black;
+        }
+
+        #info {
+            color: teal;
+        }
+
+        p.warning,
+        sup {
+            color: red;
+            font-size: small;
+        }
     </style>
 
 </head>
