--- a/lesson_04_10/lesson1.html
+++ b/lesson_04_10/lesson1.html
@@ -31,9 +31,18 @@
 
         }
 
-        strong {
+        #entrees dt strong {
             font-style: italic;
         }
+
+        .newitem strong {
+            font-style: italic;
+        }
+
+        dl dt strong {
+            font-style: normal;
+        }
+
 
         p {
             font: 1em sans-serif;
@@ -53,10 +62,16 @@
             color: teal;
         }
 
-        p.warning,
-        sup {
+        p.warning,sup {
+            
             color: red;
             font-size: small;
+        }
+
+        .price {
+            font-family: 'Times New Roman', Times, serif;
+            font-style: italic;
+            color: gray;
         }
     </style>
 
