--- a/lesson_04_10/lesson1.html
+++ b/lesson_04_10/lesson1.html
@@ -56,6 +56,10 @@
         #info p {
             font-style: italic;
             color: black;
+            line-height: 2em;
+            text-align: center;
+            text-decoration: underline;
+            letter-spacing: 0.2em;
         }
 
         #info {
@@ -63,7 +67,7 @@
         }
 
         p.warning,sup {
-            
+
             color: red;
             font-size: small;
         }
