--- a/lesson_04_10/test.html
+++ b/lesson_04_10/test.html
@@ -6,7 +6,17 @@
         <title>Color</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+
+        <style>
+            blockquote {
+                
+                border: dashed silver 4px;
+                color: green;
+                background-color: beige;
+
+            }
+
+        </style>
     </head>
     <body>
         <blockquote>
