--- a/lesson_04_10/test.html
+++ b/lesson_04_10/test.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Color</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            blockquote {
-                /*
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Color</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        blockquote {
+            /*
                 border-style: dashed;
                 border-width: 4px;
                 border-color: blueviolet;
                 */
-                border: dashed silver 4px;
-                color: green;
-                background-color: beige;
-            }
-        </style>
-    </head>
-    <body>
-        <blockquote>
-            Ut nostrud duis nisi magna do ad laborum. Sit incididunt eu ipsum irure consequat non elit sunt occaecat aliqua amet ea pariatur. Ut mollit amet dolore deserunt nulla consequat. Pariatur ad labore exercitation ea reprehenderit commodo ea. Anim magna est id laboris dolore consectetur qui eiusmod dolor. Aliqua consequat dolore esse aliqua sunt ad enim veniam anim reprehenderit. Eu proident fugiat duis ex sit est nisi minim veniam consectetur Lorem dolor culpa do.
+            border: dashed silver 4px;
+            color: green;
+            padding: 1em;
+            background-color: beige;
+            background-clip: content-box;
+        }
 
-        </blockquote>
-        <script src="" async defer></script>
-    </body>
+        a {
+            text-decoration: none;
+        }
+
+        a:link {
+            color: maroon;
+        }
+
+        a:visited {
+            color: gray;
+        }
+
+        a:hover {
+            background-color: blue;
+
+        }
+
+        a:active {
+            color: plum;
+            background-color: blueviolet;
+        }
+    </style>
+</head>
+
+<body>
+    <blockquote>
+        Ut nostrud duis nisi magna do ad laborum. Sit incididunt eu ipsum irure consequat non elit sunt occaecat aliqua
+        amet ea pariatur. Ut mollit amet dolore deserunt nulla consequat. Pariatur ad labore exercitation ea
+        reprehenderit commodo ea. Anim magna est id laboris dolore consectetur qui eiusmod dolor. Aliqua consequat
+        dolore esse aliqua sunt ad enim veniam anim reprehenderit. Eu proident fugiat duis ex sit est nisi minim veniam
+        consectetur Lorem dolor culpa do.
+
+    </blockquote>
+    <a href="http://google.com.tw">google</a>
+</body>
+
 </html>
