--- a/lesson_04_10/test.html
+++ b/lesson_04_10/test.html
@@ -42,6 +42,23 @@
             color: plum;
             background-color: blueviolet;
         }
+        p.warning{
+                color:rgb(17, 0, 255);
+            }
+
+            p.warning::before{
+                content: "前面 ";
+                color:red;
+            }
+
+            p.warning::after{
+                content:"後面";
+                color:red;
+            }
+            blockquote.second{
+                color:aliceblue;
+                background-image: url("https://picsum.photos/id/683/600/400");
+            }
     </style>
 </head>
 
@@ -55,6 +72,15 @@
 
     </blockquote>
     <a href="http://google.com.tw">google</a>
+    <p class="warning">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <blockquote class="second">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias libero sapiente id expedita laudantium enim cum possimus sed ipsum labore unde harum, ex minus quam maxime dolor consequatur, pariatur quia?
+
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, quaerat assumenda. Nesciunt ab vel non magnam quia vero eligendi a, sit asperiores hic, obcaecati et laboriosam numquam provident odit ex!
+
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime error unde laudantium quibusdam architecto natus. Blanditiis, numquam. Magnam quisquam dicta, voluptatum ullam, molestias pariatur non corrupti illum minus dolorum rem!
+    </blockquote>
+    
 </body>
 
 </html>
