--- a/lesson_04_10/lesson2.html
+++ b/lesson_04_10/lesson2.html
@@ -11,6 +11,7 @@
             font-size: 100%;
             line-height: 175%;
             margin: 0 15% 0;
+            background-color: #EEA9A9;
         }
 
         header {
@@ -23,9 +24,29 @@
             text-decoration: none;
         }
 
+        a:link {
+            color: #939;
+        }
+
+        a:visited {
+            color: #937393;
+
+        }
+
+        a:hover {
+            color: #c700f2;
+            background-color: #fff;
+        }
+
+        a:active {
+            color: #f0f;
+            background-color: #fff;
+        }
+
         h1 {
             font: bold 1.5em Georgia, serif;
             text-shadow: .1em .1em .2em gray;
+            background-color: rgba(255, 255, 255, 5);
         }
 
         h2 {
@@ -42,13 +63,13 @@
         strong {
             font-style: italic;
         }
-        
+
         ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
         }
-        
+
 
         #info p {
             font-style: italic;
