--- a/lesson_04_11/background.html
+++ b/lesson_04_11/background.html
@@ -22,10 +22,25 @@
         a {
             text-decoration: none;
         }
+        a:link{
+            color: #939;
+        }
+        a:visited{
+            color: #937393;
+        }
+        a:hover{
+            color: #c700f2;
+            background-color: #60373E;
+        }
+        a:active{
+            color: #C1328E;
+            background-color: #E03C8A;
+        }
 
         h1 {
             font: bold 1.5em Georgia, serif;
             text-shadow: .1em .1em .2em gray;
+            color: #C1328E;
         }
 
         h2 {
@@ -33,6 +48,7 @@
             text-transform: uppercase;
             letter-spacing: .5em;
             text-align: center;
+            color: #C1328E;
         }
 
         dt {
