--- a/lesson_04_11/burgers.html
+++ b/lesson_04_11/burgers.html
@@ -31,9 +31,9 @@
 
 <body>
 
-    <h1>畫廊：烘焙食品</h1>
+    <h1>畫廊：漢堡</h1>
     <p></p>
-    <p><img src="photos/bread-800.jpg" alt="鄉村麵包" width="800" height="600"></p>
+    <p><img src="photos/burgers-800.jpg" alt="漢堡" width="800" height="600"></p>
     <p> <a href="test.html">[返回圖庫]</a></p>
 </body>
 
