--- a/lesson_04_11_1/lesson2.html
+++ b/lesson_04_11_1/lesson2.html
@@ -12,8 +12,8 @@
             line-height: 175%;
             margin: 0 15% 0;
             background-color: #d2dc9d;
-            background-image: url(images/blackgoose.png);
-            background-repeat: no-repeat;
+            background-image: url(images/aaa.png);
+            background-repeat: repeat;
             background-position: center 100px;
             background-attachment: fixed;
             background-size: contain;
