--- a/lesson_04_11_1/lesson2.html
+++ b/lesson_04_11_1/lesson2.html
@@ -11,7 +11,7 @@
             font-size: 100%;
             line-height: 175%;
             margin: 0 15% 0;
-            background-color: #d2dc9d;
+            background-color: #EBB471;
             background-image: url(images/aaa.png);
             background-repeat: repeat;
             background-position: center 100px;
