--- a/lesson_04_17_1/lesson1.html
+++ b/lesson_04_17_1/lesson1.html
@@ -37,6 +37,18 @@
             padding: 2em 4em ;
 
         }
+        #border{
+            width: 200px;
+            height: 100px;
+            background-color: #F7C242;
+            border-top-left-radius: 1em;
+            border-top-right-radius: 2em;
+            border-bottom-right-radius: 1em;
+            border-bottom-left-radius: 2em;
+            padding: 1em;
+            padding: 1em;
+
+        }
     </style>
 </head>
 
@@ -60,6 +72,8 @@
             placeat sit sunt veritatis facilis provident quod nostrum quas maxime consequatur aspernatur omnis hic.
         </p>
     </blockquote>
+    <p id="border">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate error facilis 
 </body>
 
 </html>
