--- a/lesson_04_17_2/lesson4.html
+++ b/lesson_04_17_2/lesson4.html
@@ -7,34 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        p {
-            border: 2px red solid;
-        }
-
-        #float {
+        img {
             float: left;
-            width: 200px;
             margin: 1em;
-            background-color: rgb(188, 248, 248);
+        }
+        h2{
+            clear: both;
+            margin-top: 1em;
         }
     </style>
 </head>
 
 <body>
     <p>
-        TIP: Make sure that your packing tub or bucket has a hole below the top of the mold so the water will drain
-        off.Veniam sit sit non nisi culpa enim nulla sunt. Cupidatat officia esse dolore do enim culpa ut
+        <img src="https://picsum.photos/id/598/150/150" alt="">
+        Veniam sit sit non nisi culpa enim nulla sunt. Cupidatat officia esse dolore do enim culpa ut
     </p>
-
-    <p id="float">
+    <h2>這是標題</h2>
+    <p>
         Cillum ea excepteur voluptate quis laborum in dolor nostrud. Adipisicing consectetur exercitation cupidatat ad
         sit consequat voluptate fugiat nisi eiusmod ipsum. Aute cillum tempor ea officia consequat quis tempor ullamco
         veniam.
-    </p>
-
-    <p>
-        Id sint id et non duis ullamco sunt laboris consequat sunt tempor deserunt. Laborum quis tempor proident eiusmod
-
     </p>
 
     <p>
@@ -43,5 +36,3 @@
         reprehenderit qui aliqua. Exercitation nostrud sint irure fugiat.
     </p>
 </body>
-
-</html>
