--- a/lesson_04_18_1/index.html
+++ b/lesson_04_18_1/index.html
@@ -35,20 +35,34 @@
             margin: 0 10%;
         }
 
-        main::after{
+        main::after {
             content: "";
             display: block;
             clear: both;
 
         }
+
         main section {
             background-color: rgba(255, 255, 255, 0.2);
             float: left;
             box-sizing: border-box;
             width: 33%;
             padding: 1em;
+            height: 600px;
+            color: #00000099;
+            line-height: 1.5em;
         }
-        footer{
+
+        main section div {
+            text-align: center;
+
+        }
+
+        main section h3 {
+            color: black;
+        }
+
+        footer {
             text-align: center;
             margin-top: 3em;
             font-size: small;
@@ -64,21 +78,28 @@
 
     <main>
         <section id="left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestiae. Culpa cum corrupti, quidem
-            nesciunt quibusdam, a tempora nulla asperiores ducimus repudiandae obcaecati atque suscipit modi tempore et.
-            Aliquid, itaque?
+            <div><img src="/lesson_04_18_1/assets/a1.jpg" alt="烤西瓜牛排沙拉" width="200"></div>
+            <h3>烤西瓜牛排沙拉</h3>
+            <p>
+                西瓜居然也能烤來吃？這道溫沙拉絕對是你很少吃到的滋味！夏天西瓜Juicy清脆的口感，很適合健身人補充水分和能量，沒想到烤過之後更加鮮甜！如果再加入蛋白質滿滿的牛排和新鮮沙拉，就是一道營養又解膩的清爽低卡餐～
+            </p>
         </section>
 
         <section id="center">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestiae. Culpa cum corrupti, quidem
-            nesciunt quibusdam, a tempora nulla asperiores ducimus repudiandae obcaecati atque suscipit modi tempore et.
-            Aliquid, itaque?
+            <div><img src="/lesson_04_18_1/assets/a2.jpg" alt="椰子雞碗豆沙拉" width="200"></div>
+            <h3>椰子雞碗豆沙拉</h3>
+            <p>
+                夏天到了！炎熱的天氣讓人很容易沒有胃口、吃不下飯，這時候很適合來一碗清涼的沙拉，但是大部分的人都很少自己動手做沙拉，今天就為大家帶來一個營養滿滿的沙拉食譜，不但只有不到300大卡的熱量、還包含了將近30g的蛋白質！
+            </p>
         </section>
 
         <section id="right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestiae. Culpa cum corrupti, quidem
-            nesciunt quibusdam, a tempora nulla asperiores ducimus repudiandae obcaecati atque suscipit modi tempore et.
-            Aliquid, itaque?
+            <div><img src="/lesson_04_18_1/assets/a3.png" alt="烤蔬菜溫沙拉" width="200"></div>
+            <h3>烤蔬菜溫沙拉</h3>
+            <p>
+                溫沙拉可以是全熟的菜組合而成，也可以是有生有熟（像是生菜配烤雞肉），重點是在涼涼的沙拉中加入一些熱度，整體不會那麼冷～這次日本健康教練AYUMI要介紹的是「烤蔬菜溫沙拉」，用全熟的烤蔬菜組合而成，可以選擇你自己喜歡的蔬菜來製作，烤出來溫溫熱熱又非常健康，吃起來會很滿足！
+            </p>
+
         </section>
     </main>
 
