--- a/lesson_04_18_2/lesson1.html
+++ b/lesson_04_18_2/lesson1.html
@@ -9,37 +9,39 @@
     <style>
         #container {
             display: flex;
-            /*
+
             flex-direction: row;
-            flex-wrap: wrap;
-            */
-            flex-flow: row wrap;
+            
+            /*flex-wrap: wrap;*/
+
+            /*flex-flow: row wrap;*/
             height: 500px;
+            justify-content: space-around;
         }
 
         .box1 {
             background-color: rgb(133, 250, 211);
-            width: 50%;
+            width: 10%;
         }
 
         .box2 {
             background-color: rgb(199, 247, 178);
-            width: 25%;
+            width: 10%;
         }
 
         .box3 {
             background-color: rgb(160, 165, 243);
-            width: 25%;
+            width: 10%;
         }
 
         .box4 {
             background-color: rgb(248, 150, 150);
-            width: 50%;
+            width: 10%;
         }
 
         .box5 {
             background-color: rgb(255, 168, 127);
-            width: 50%;
+            width: 10%;
         }
     </style>
 </head>
