--- a/lesson_04_24_1/lesson1.html
+++ b/lesson_04_24_1/lesson1.html
@@ -119,6 +119,22 @@
         main h4 {
             font-size: 1.5em;
         }
+        footer{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: flex-end;
+            align-items: center;
+            margin-top: 2em;
+            /*margin: 0 20%;*/
+        }
+        footer #copyright{
+            font-size: smaller;
+            margin-right: 2em;
+        }
+        footer #copyright ~p{
+            flex: 0 1 40px;
+        }
     </style>
 </head>
 
@@ -173,6 +189,12 @@
         </div>
 
     </main>
+    <footer>
+        <p id="copyright">© 2023 Company, Inc</p>
+        <p><a href="#"> <img src="images/01.png" alt="icon4" width="20"></a></p>
+        <p><a href="#"> <img src="images/02.png" alt="icon4" width="20"></a></p>
+        <p><a href="#"> <img src="images/03.png" alt="icon4" width="20"></a></p>
+    </footer>
 
 </body>
 
