--- a/lesson_04_25_3/lesson1.html
+++ b/lesson_04_25_3/lesson1.html
@@ -10,7 +10,7 @@
         #container {
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 10em 15em 60em 15em 5em;
+            grid-template-rows: auto 15em 60em 15em 5em;
             grid-template-areas:
                 "header"
                 "aside"
@@ -21,7 +21,7 @@
 
         header {
             grid-area: header;
-            background-color: rgb(250, 198, 174);
+            
         }
 
         aside {
@@ -34,7 +34,7 @@
             background-color: rgb(148, 248, 245);
         }
 
-        section{
+        section {
             grid-area: links;
             background-color: rgb(139, 120, 247);
         }
@@ -44,39 +44,88 @@
             background-color: rgb(245, 179, 245);
         }
 
+        /*header-layout*/
+        header{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        header ul{
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+        }
+
+        header li a {
+            display: block;
+            background-color: rgb(74, 153, 243);
+            color: white;
+            border-radius: 0.3em;
+            padding: .5em;
+            margin: 0 .2em;
+        }
+
+        header li a:link{
+            text-decoration: none;
+        }
+
         @media (min-width:768px) {
+
             /*平板和筆電*/
-            #container{
+            #container {
                 display: grid;
                 grid-template-columns: 20em 1fr;
-                grid-template-rows: 10em 60em 15em 5em;
-                grid-template-areas: 
-                "header header"
-                "aside main"
-                "links links"
-                "footer footer"
+                grid-template-rows: auto 60em 15em 5em;
+                grid-template-areas:
+                    "header header"
+                    "aside main"
+                    "links links"
+                    "footer footer"
+            }
+            header{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: space-between;
             }
         }
 
         @media (min-width:1200px) {
+
             /*桌機*/
-            #container{
+            #container {
                 display: grid;
                 grid-template-columns: 20em 1fr 20em;
-                grid-template-rows: 10em 60em 5em;
-                grid-template-areas: 
-                "header header header"
-                "aside main links"
-                "footer footer footer"
+                grid-template-rows: auto 60em 5em;
+                grid-template-areas:
+                    "header header header"
+                    "aside main links"
+                    "footer footer footer"
 
-        }
+            }
     </style>
 </head>
 
 <body>
     <div id="container">
         <header>
-            <h1>Header</h1>
+            <img src="images/logo.png" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">Feature</a></li>
+                    <li><a href="#">Price</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
         </header>
 
         <aside>
