--- a/test001/001.html
+++ b/test001/001.html
@@ -138,9 +138,10 @@
 <body>
     <div id="container">
         <header>
-
+            
             <img src="images/pexels-luddmyla-2387324.jpg" alt="">
-
+            <img src="images/pexels-umut-ülgi-10523700.jpg" alt="">
+        
             <nav>
                 <ul>
                     <li><a href="#" class="active">One</a></li>
