--- a/lesson_05_01/index.html
+++ b/lesson_05_01/index.html
@@ -39,10 +39,20 @@
                 </div>
             </div>
         </nav>
+        <div id="layout">
+            <header>
+                header
+            </header>
+            <main>
+                main
+            </main>
 
-        <h1>Hello World!</h1>
+            <footer>
+                footer
+            </footer>
+        </div>
     </div>
-    
+
 
     <script src="js/bootstrap.min.js"> </script>
 </body>
