--- a/lesson_05_01/index.html
+++ b/lesson_05_01/index.html
@@ -41,37 +41,45 @@
         </nav>
         <div id="layout">
             <header>
-                header
+                <h2>YouBike微笑單車榮獲<br>2023台灣精品獎</h2>
+                <picture>
+                    <source media="(min-width: 1400px)" srcset="images/youbike3.jpg" width="1200">
+                    <source media="(min-width: 1200px)" srcset="images/youbike3.jpg" width="900">
+                    <source media="(min-width: 992px)" srcset="images/youbike3.jpg" width="600">
+                    <source media="(min-width: 768px)" srcset="images/youbike3.jpg" width="400">
+                    <source media="(min-width: 576px)" srcset="images/youbike.png">
+                    <img src="images/youbike.png" alt="youbike">
+                </picture>
             </header>
             <main>
                 <div id="cards">
-                <section class="s1">
-                    1
-                </section>
-                <section class="s2">
-                    2
-                </section>
-                <section class="s1">
-                    3
-                </section>
-                <section class="s2">
-                    4
-                </section>
-                <section class="s1">
-                    5
-                </section>
-                <section class="s2">
-                    6
-                </section>
-                <section class="s1">
-                    7                    
-                </section>
-                <section class="s2">
-                    8
-                </section>
-                <section class="s1">
-                    9
-                </section>
+                    <section class="s1">
+                        <h1>1</h1>
+                    </section>
+                    <section class="s2">
+                        <h1>2</h1>
+                    </section>
+                    <section class="s1">
+                        <h1>3</h1>
+                    </section>
+                    <section class="s2">
+                        <h1>4</h1>
+                    </section>
+                    <section class="s1">
+                        <h1>5</h1>
+                    </section>
+                    <section class="s2">
+                        <h1>6</h1>
+                    </section>
+                    <section class="s1">
+                        <h1>7</h1>
+                    </section>
+                    <section class="s2">
+                        <h1>8</h1>
+                    </section>
+                    <section class="s1">
+                        <h1>9</h1>
+                    </section>
                 </div>
             </main>
             <footer>
