--- a/lesson_05_02/index.html
+++ b/lesson_05_02/index.html
@@ -83,6 +83,10 @@
                 </div>
             </main>
             <footer>
+                <p>© 2023 Company, Inc</p>
+                <img src="images/activity@2x.svg" width="32">
+                <img src="images/bar-chart-fill@2x.svg" width="32">
+                <img src="images/pie-chart@2x.svg" width="32">
             </footer>
         </div>
     </div>
