--- a/lesson_05_02/index.html
+++ b/lesson_05_02/index.html
@@ -83,10 +83,15 @@
                 </div>
             </main>
             <footer>
-                <p>© 2023 Company, Inc</p>
-                <img src="images/activity@2x.svg" width="32">
-                <img src="images/bar-chart-fill@2x.svg" width="32">
-                <img src="images/pie-chart@2x.svg" width="32">
+                <ul>
+                    <li><a href="#"><img src="images/activity@2x.svg" width="32"><span>activity</span></a></li>
+                    <li><a href="#"><img src="images/bar-chart-fill@2x.svg" width="32"><span>bar</span></a></li>
+                    <li><a href="#"><img src="images/pie-chart@2x.svg" width="32"><span>pie</span></a></li>
+                </ul>
+                <address>
+                    <p>Created by © 2023 </p>
+                </address>
+
             </footer>
         </div>
     </div>
