--- a/lesson_05_02/index.html
+++ b/lesson_05_02/index.html
@@ -64,56 +64,128 @@
                                 consequuntur aspernatur voluptate ipsa provident corrupti.
                             </p>
                             <div class="cardFooter">
-                                <a href="#">顯示</a><a href="#">編輯</a><span>9分鐘</span>
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
                             </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                     <section>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum natus neque eaque nemo
-                            eveniet et laudantium vero minus praesentium sed ipsa amet magnam esse, accusamus earum,
-                            nostrum tempore quasi quod?
+                        <div class="card">
+                            <h3 class="cardTitle">
+                            <img src="https://picsum.photos/id/655/400/300" width="100%">
+                            </h3>
+                            <p class="cardText">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit itaque totam quas at ad
+                                nobis nesciunt, modi dolorum dignissimos doloremque inventore natus dolor, labore
+                                consequuntur aspernatur voluptate ipsa provident corrupti.
+                            </p>
+                            <div class="cardFooter">
+                                <a href="#" class="view">顯示</a><a href="#" class="edit">編輯</a><span>9分鐘</span>
+                            </div>
                         </div>
                     </section>
                 </div>
